@startuml
title Modelo de dominio - Consultorio Dental

skinparam shadowing false
skinparam classAttributeIconSize 0
hide methods

class Paciente <<entity>> {
  nombre
  telefono
  correo
  fecha_nacimiento
}

class Dentista <<entity>> {
  nombre
  especialidad
  cedula_profesional
  consultorio
}

class Cita <<entity>> {
  fecha
  hora_inicio
  hora_fin
  motivo
  estado
}

class Expediente <<entity>> {
  diagnostico
  observaciones
  procedimientos_realizados
}

class DocumentoClinico <<entity>> {
  tipo
  nombre_original
  ruta
}

class Tratamiento <<entity>> {
  nombre
  costo
  estado
  fecha_inicio
}

class Receta <<entity>> {
  medicamento
  dosis
  frecuencia
  duracion
}

class Inventario <<entity>> {
  nombre
  categoria
  cantidad
  stock_minimo
}

Paciente "1" -- "0..*" Cita : agenda
Dentista "1" -- "0..*" Cita : atiende
Paciente "1" -- "0..1" Expediente : tiene
Expediente "1" -- "0..*" DocumentoClinico : adjunta
Paciente "1" -- "0..*" Tratamiento : recibe
Dentista "1" -- "0..*" Tratamiento : realiza
Tratamiento "0..1" -- "0..*" Receta : genera
Paciente "1" -- "0..*" Receta : recibe

@enduml
